Fixed mysterious scroller and ugly icons in nav on mobile (#156)
* Fixed mysterious scroller and ugly icons in nav on mobile

* Addex extra fix for screens smaller than 400px

--- a/stylesheets/crystallicumDark/extra.css
+++ b/stylesheets/crystallicumDark/extra.css
@@ -300,15 +300,14 @@
 }
 
 @media only screen and (max-width: 480px) {
-	.mobile_nav {
-		font-size: 0.6rem;
+	.mobile_nav a {
+		padding: 5px 7px;
 	}
 }
 
 
-
 @media only screen and (max-width: 400px) {
-	.mobile_nav {
-		font-size: 0.3rem;
+	.mobile_nav a {
+		padding: 3px 5px;
 	}
 }
